k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sniffer-api
  namespace: sniffer
  labels:
    app: sniffer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sniffer-api
  template:
    metadata:
      labels:
        app: sniffer-api
    spec:
      containers:
        - name: api
          image: artu0s/sniffer:latest
          imagePullPolicy: IfNotPresent
          args: ["--mode=api"]
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
