k8s/elasticvue.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticvue
  namespace: sniffer
  labels:
    app: elasticvue
spec:
  selector:
    app: elasticvue
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticvue
  namespace: sniffer
  labels:
    app: elasticvue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticvue
  template:
    metadata:
      labels:
        app: elasticvue
    spec:
      containers:
        - name: elasticvue
          image: cars10/elasticvue
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
