k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sniffer-api
  namespace: sniffer
spec:
  selector:
    app: sniffer-api
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
